--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,4 +1,5 @@
 name: Build
+
 on:
   schedule:
     - cron: '0 0 * * 0'
@@ -14,7 +15,7 @@ jobs:
         include:
           - { sys: mingw64, arch: 64bit, env: x86_64 }
           - { sys: mingw32, arch: 32bit, env: i686 }
-    
+
     defaults:
       run:
         shell: msys2 {0}
@@ -54,3 +55,14 @@ jobs:
           publish_dir: ./dist
           destination_dir: ${{matrix.env}}
           keep_files: true
+
+      - name: Pull latest changes from gh-pages
+        run: |
+          git pull origin gh-pages --ff-only || {
+            echo "Unable to fast-forward merge. Performing a hard reset.";
+            git reset --hard origin/gh-pages;
+          }
+
+      - name: Push the commit or tag
+        run: |
+          "C:\Program Files\Git\bin\git.exe" push origin gh-pages
