--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,5 +1,7 @@
 name: Build
 on:
+  #schedule:
+   # - cron: '0 0 * * 0'
   workflow_dispatch:
 
 jobs:
@@ -11,7 +13,7 @@ jobs:
       matrix:
         include:
           - { sys: mingw64, arch: 64bit, env: x86_64 }
-          - { sys: mingw32, arch: 32bit, env: i686 }
+          #- { sys: mingw32, arch: 32bit, env: i686 }
     
     defaults:
       run:
